# goose

./: .gitignore  .impeccable-live.json  AGENTS.md  BRAINROT.md  BRANCHING.md  CUSTOM_DISTROS.md  Cargo.toml  GETTING_STARTED.md  Justfile  README.md  README.zh-CN.md  SKEIN.md  SKEIN_STATUS.md  diff.patch  diff.txt  download_cli.sh  flake.nix  full_diff.patch  full_diff.txt  goose-self-test.yaml  pytest.ini  test_acp_client.py
.codex/skills/: impeccable
.github/workflows/: build-cli.yml  build-notify.yml  bundle-desktop-linux.yml  bundle-desktop-windows.yml  bundle-goose2.yml  canary.yml  ci.yml  copilot-switchboard.yml  dependabot-auto-merge.yml  docs-update-cli-ref.yml  (+14 more)
.husky/: pre-commit  pre-push
.plan/: per_model_context_limit_ui.md
crates/goose-sdk/packaging/python/: .gitignore  make_wheel.py  pyproject.toml
documentation/: docusaurus.config.ts  package-lock.json
eval-bench/: README.md  annotate.py  calibrate.py  pyproject.toml  run_kpass.py  run_once.py  slices.py
eval-bench/grader_runners/: README.md  _common.py  markdown_sections.py  output_shape.py
eval-bench/lib/: __init__.py  annotations.py  calibration.py  composition.py  failure_modes.py  graders.py  grading.py  judge.py  kpass.py  runner.py  store.py  tasks.py
eval-bench/schemas/: calibration.schema.json  failure-modes.schema.json  graders.schema.json  tasks.schema.json
eval-bench/tests/: conftest.py  test_annotate_cli.py  test_annotations.py  test_calibrate_cli.py  test_calibration.py  test_calibration_runner.py  test_composition.py  test_failure_modes.py  test_graders.py  test_grading.py  test_harness_cli.py  test_judge.py  test_kpass.py  test_run_once.py  test_runner.py  test_slices_cli.py  test_store.py  test_store_read.py  test_tasks.py
eval-bench/tests/grader_runners/: test_markdown_sections.py  test_output_shape.py
oidc-proxy/: .gitignore  package-lock.json  package.json
recipe-scanner/: scan-recipe.sh
ui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/talos/src-tauri/: Cargo.toml  tauri.conf.json
ui/talos/src-tauri/capabilities/: default.json
ui/talos/src-tauri/src/: lib.rs
ui/talos/src-tauri/src/commands/: acp.rs  diagnostics.rs  folders.rs  mod.rs  recipes.rs
ui/talos/src-tauri/src/services/: log_capture.rs  mod.rs
ui/tandem/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui/tandem/src-tauri/icons/: icon.icns
ui/tandem/src-tauri/src/: lib.rs
ui/tandem/src-tauri/src/commands/: diagnostics.rs  settings.rs
ui/tandem/src-tauri/src/services/: goose_serve.rs  mod.rs
(+992 files in other folders)
