[package]
name = "talos"
version = "0.1.0"
description = "Talos desktop app"
authors = ["you"]
edition = "2021"

[[bin]]
name = "talos-tauri"
path = "src/main.rs"

[lib]
name = "talos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "6"
