[package]
name = "tandem"
version = "0.1.0"
description = "Tandem desktop app"
authors = ["you"]
edition = "2021"

[[bin]]
name = "tandem-tauri"
path = "src/main.rs"

[lib]
name = "tandem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "6"
serde_yaml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
os_info = "3"
