[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goose-sdk"
version = "0.1.0"
description = "Python bindings for the Goose agent (in-process via uniffi)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goose_sdk = ["*.dylib", "*.so", "*.dll"]
